fixed icon alignment in property contact us form

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -278,7 +278,7 @@ a:focus, a:active, .btn:focus, .btn:active{outline:none !important}
 .property-contact-popup .form-control:hover{border-color:#66afe9}
 .property-contact-popup .form-control:focus{border-color:#66afe9;outline:0;-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);-moz-box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);-ms-box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);-o-box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6)}
 .property-contact-popup textarea{resize:none}
-.property-contact-popup .form-horizontal .form-group .fa{position:absolute;left:25px;top:8px;color:#999}
+.property-contact-popup .form-horizontal .form-group .fa{position:absolute;left:25px;top:10px;color:#999}
 .property-contact-popup .pad-right-0{padding-right:0}
 
 .property-contact-popup .form-horizontal .checkbox{padding-top:5px;float:right}
